# squint

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  BENCHMARK.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  RELEASING.md  SECURITY.md  cliff.toml  deny.toml  dist-workspace.toml  pyproject.toml
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: bench.yml  ci.yml  codeql.yml  docs.yml  fuzz.yml  pypi.yml  release.yml  scorecard.yml  vscode.yml
benches/: linter_bench.rs
benches/fixtures/: large.sql  medium.sql  small.sql
docs/: book.toml
docs/src/: SUMMARY.md  cli-reference.md  configuration.md  contributing.md  editor-integration.md  installation.md  introduction.md  json-output.md  pre-commit.md  quick-start.md  severity.md  suppression.md
docs/src/rules/: aliasing.md  ambiguous.md  capitalisation.md  convention.md  jinja.md  layout.md  overview.md  references.md  structure.md
editors/vscode/: LICENSE  README.md  package-lock.json  package.json
editors/vscode/src/: extension.ts
fuzz/: .gitignore  Cargo.toml  rust-toolchain.toml
fuzz/fuzz_targets/: fuzz_fix.rs  fuzz_lex.rs  fuzz_lint.rs
fuzz/seeds/fuzz_fix/: 1d57e89f  44525d16  797825a6  934d5d1a  ec9010f6
fuzz/seeds/fuzz_lex/: 26489d2e  b1ee5c64  b94c0b53
fuzz/seeds/fuzz_lint/: 6c48d909  ab2768ed
python/squint/: __init__.py  __main__.py
scripts/: bench_compare.sh
src/: analysis.rs  comment.rs  config.rs  lexer.rs  lib.rs  linter.rs  main.rs  node.rs  parser.rs  tokens.rs
src/rules/: mod.rs
src/rules/aliasing/: al02.rs  al03.rs  al04.rs  al05.rs  al06.rs  al08.rs  al09.rs  mod.rs
src/rules/ambiguous/: am01.rs  am02.rs  am05.rs  am06.rs  mod.rs
src/rules/capitalisation/: cp01.rs  cp02.rs  cp03.rs  cp04.rs  cp05.rs  mod.rs
src/rules/convention/: cv03.rs  cv04.rs  cv05.rs  cv10.rs  mod.rs
src/rules/jinja/: jj01.rs  mod.rs
src/rules/layout/: lt01.rs  lt02.rs  lt03.rs  lt05.rs  lt06.rs  lt07.rs  lt08.rs  lt09.rs  lt10.rs  lt11.rs  lt12.rs  mod.rs
src/rules/references/: mod.rs  rf01.rs  rf02.rs
src/rules/structure/: mod.rs  st03.rs  st08.rs
tests/: aliasing.rs  ambiguous.rs  ambiguous_new.rs  capitalisation.rs  convention.rs  convention_cv10.rs  fixes.rs  fmt_off.rs  jinja.rs  layout.rs  layout_lt09.rs  layout_new.rs  noqa.rs  references.rs  references_new.rs  structure.rs
tests/common/: mod.rs
